// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  display: inline-block;
}

.c0 {
  display: inline-block;
  text-align: center;
  padding: 10px 1em;
  font-weight: normal;
  background-color: #ea232d;
  border: none;
  color: #fff;
}

<Link
  className="c0"
  to="internal-link-slug"
>
  <span
    className="c1"
  >
    Button text
  </span>
</Link>
`;

exports[`renders correctly 2`] = `
.c4 {
  display: inline-block;
}

.c3 {
  display: inline-block;
  text-align: center;
  padding: 10px 1em;
  font-weight: normal;
  background-color: transparent;
  border: 1px solid #fff;
  color: #fff;
}

.c1 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

.c0 {
  padding: 20px 0;
  background-color: #4d63b5;
  margin-bottom: 40px;
}

.c2 {
  color: #fff;
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    <h3
      className="c2"
    >
      mock header text
    </h3>
    <a
      className="c3"
      href="http://example.com"
    >
      <span
        className="c4"
      >
        Button text
      </span>
    </a>
  </div>
</section>
`;
